--- a/src/styles.css
+++ b/src/styles.css
@@ -99,7 +99,7 @@ nav ul li a:hover {
 }
 
 /* Promotions section */
-.promotions {
+/* .promotions {
     padding: 50px 20px;
     background-color: #ecf0f1;
     text-align: center;
@@ -128,7 +128,7 @@ nav ul li a:hover {
 
 .promo p {
     font-size: 1rem;
-}
+} */
 
 /* Footer styles */
 footer {
