--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    background-color: gray;
+    background-color: #ffff;
     color: #333;
 }
 
@@ -18,7 +18,7 @@ h1, h2, h3 {
 
 /* Header styles */
 header {
-    background-color: #3498db;
+    background-color: #808080;
     color: white;
     padding: 20px 0;
     text-align: center;
